Fix modern GC log parsing and update README with recommended logging pattern